' Generated by UML Generator
' Encoded: hLVVRzms37w_lqAFyd8v31Yo1wCDcf-8WNGBuWm5MXI3OZC-8RRiIRfirwB_-oZ9bYNRITPjzt1dazH7yXD5yTufpQJUDVLAFNBHCSaQKjHCgHEj9R_VQSYALkJy2v0VLrjU0YcuB6fOhQmLEMkRXedoHhO5ADLAydL5oE5NHDMy-4Rgjgf0fkJQ_fAt_SCbAtGhzviAj1FGASx6mYS6h70gbPBth7lJ6zxjErWFteyHMC2Vv8gfhR4vfdRX8NuTIAYuqkX1uugKHCjxP2zDKlBKyj8iwrmWLC8VEr0w9RVk8J5Fgck5WjMtWOGSv1F8CnIsDLmXK0qz4N7iEL8ggZN9TrrNSv2zuFYb-9UmAMw9Xh-q2Tm-6FE3hLNIcWlCqo4F2Ir7UWki70ALzZabfxk71v1GzZeNLooaHfI9RgVH2R2cb-PxfBdPS964vBCoUp06UveCGOtHdBLr3ONchNZF1Aj6qWOn5WuNZr0QOdBGRwxP_OTMFWvynSgUjPAhWdU61QGovltSgvvXd0kkEQlv5sQydpEDJ9fldz0iOhlk00jMZoeQr942dSr0v_itBc1bUL530q9JSBz8WaixiCA3C_epfzFuh5iar_ay3qcWCVoeeoDNQK1Ex6S65J0Q46giiIymkSo3EUbCwSmdbvYcuEAjG814Mh8obAemHVfwJSJEUZUd--oSyj9natWcZL69z6funkw-nVF1H0-MQHDVAqrumxFtEzZCTpdnnHFlbyroCOVmQDZ6CJaNLdRDJJyAw_hbDhX5UsosngVIGylfJK-aP7ihN-gPFIxj7V_26jzPNcoUM6HtxPLpkxGutgh1C8aZzBJvf2V5DsGTacPFasFhWTVGqvUIo_4bODAhOxRZ7XGOJKH1Lx1-wNCkFLdFE3JwrzqbFIC1i64aJYsWBB2PvHSNP6GvJTAp6pWQ6HR1jde-mWYdHc4MfYQ2Us5KdE75OMAuuyx0oCopxGli2SpxzxK4SnFPLV_WxFLNVNWzVlz04u44quo_5sd9DCDEizVmwVEQ84kLtgQ42pTZsDKBCHN0d_w7g1nC49V7EltjylBYzlSy-tXXeq6qdu-EVZeoHgej7a7RjiOg71Lp--xJcg3JPVF4CM1j-XvfjJVCWWKfkpah1_6VzY542H9-DPTmtKkfABJ0ET6PZ-FXcc0RH37EVfa0VU9UrgJ3MM7OvgNXxAJh9hdU_7fxDsp54Nx-7H4UVLgC7gfXN50cApMSo4-VnnCqUfpS3cespRpUxhfXp4zdVo02LXR7witcUF2pci-FiTRT1ZyS7aPDCfHF6cEicdR2SNz2DrDf1BYezBcktc7fu7-llm4
' URL: http://www.plantuml.com/plantuml/uml/hLVVRzms37w_lqAFyd8v31Yo1wCDcf-8WNGBuWm5MXI3OZC-8RRiIRfirwB_-oZ9bYNRITPjzt1dazH7yXD5yTufpQJUDVLAFNBHCSaQKjHCgHEj9R_VQSYALkJy2v0VLrjU0YcuB6fOhQmLEMkRXedoHhO5ADLAydL5oE5NHDMy-4Rgjgf0fkJQ_fAt_SCbAtGhzviAj1FGASx6mYS6h70gbPBth7lJ6zxjErWFteyHMC2Vv8gfhR4vfdRX8NuTIAYuqkX1uugKHCjxP2zDKlBKyj8iwrmWLC8VEr0w9RVk8J5Fgck5WjMtWOGSv1F8CnIsDLmXK0qz4N7iEL8ggZN9TrrNSv2zuFYb-9UmAMw9Xh-q2Tm-6FE3hLNIcWlCqo4F2Ir7UWki70ALzZabfxk71v1GzZeNLooaHfI9RgVH2R2cb-PxfBdPS964vBCoUp06UveCGOtHdBLr3ONchNZF1Aj6qWOn5WuNZr0QOdBGRwxP_OTMFWvynSgUjPAhWdU61QGovltSgvvXd0kkEQlv5sQydpEDJ9fldz0iOhlk00jMZoeQr942dSr0v_itBc1bUL530q9JSBz8WaixiCA3C_epfzFuh5iar_ay3qcWCVoeeoDNQK1Ex6S65J0Q46giiIymkSo3EUbCwSmdbvYcuEAjG814Mh8obAemHVfwJSJEUZUd--oSyj9natWcZL69z6funkw-nVF1H0-MQHDVAqrumxFtEzZCTpdnnHFlbyroCOVmQDZ6CJaNLdRDJJyAw_hbDhX5UsosngVIGylfJK-aP7ihN-gPFIxj7V_26jzPNcoUM6HtxPLpkxGutgh1C8aZzBJvf2V5DsGTacPFasFhWTVGqvUIo_4bODAhOxRZ7XGOJKH1Lx1-wNCkFLdFE3JwrzqbFIC1i64aJYsWBB2PvHSNP6GvJTAp6pWQ6HR1jde-mWYdHc4MfYQ2Us5KdE75OMAuuyx0oCopxGli2SpxzxK4SnFPLV_WxFLNVNWzVlz04u44quo_5sd9DCDEizVmwVEQ84kLtgQ42pTZsDKBCHN0d_w7g1nC49V7EltjylBYzlSy-tXXeq6qdu-EVZeoHgej7a7RjiOg71Lp--xJcg3JPVF4CM1j-XvfjJVCWWKfkpah1_6VzY542H9-DPTmtKkfABJ0ET6PZ-FXcc0RH37EVfa0VU9UrgJ3MM7OvgNXxAJh9hdU_7fxDsp54Nx-7H4UVLgC7gfXN50cApMSo4-VnnCqUfpS3cespRpUxhfXp4zdVo02LXR7witcUF2pci-FiTRT1ZyS7aPDCfHF6cEicdR2SNz2DrDf1BYezBcktc7fu7-llm4
' Generated on: 2026-04-04T13:57:35.681113600

@startuml
skinparam classAttributeIconSize 0
hide circle

class CommandProcessor {
  -{static} logger: Logger = LoggerFactory.getLogger(CommandProcessor.class)
  -commands: Map<CommandType, Command> = new HashMap<>()
  --
  +register(type: CommandType, command: Command): void
  +process(request: Request): Response
}

class ServerConsoleHandler {
  -commands: Map<String, Supplier<String>> = new HashMap<>()
  --
  +ServerConsoleHandler(context: Context)
  +handle(line: String): void
}

class ServerConsoleReader {
  -reader: BufferedReader = new BufferedReader(new InputStreamReader(System.in))
  --
  +readIfReady(): String
}

class CollectionManager {
  -collection: LinkedHashSet<LabWork> = new LinkedHashSet<>()
  -disciplineMap: Map<String, Discipline> = new HashMap<>()
  -initializationDate: Date
  --
  +CollectionManager()
  +sortCollection(): void
  +setInitializationDate(context: Context): void
  +addElement(element: LabWork): void
  +getCollectionSize(): long
  +setDisciplineMap(): void
  +addDiscipline(discipline: Discipline): void
  +getDisciplineMap(): Map<String,Discipline>
  +clearCollection(): void
  +getLastIdElement(): Long
  +generateId(): Long
  +setCollection(collection: LinkedHashSet<LabWork>): void
  +getElementByID(id: long): LabWork
  +deleteElementByID(id: long): boolean
  +getIterator(): Iterator<LabWork>
  +getInitializationDate(): Date
  +getCollection(): LinkedHashSet<LabWork>
}

class CommandManager {
  -commandList: Map<String, Command> = new HashMap<>()
  -history: List<String> = new ArrayList<>()
  --
  +registerCommand(commandName: String, command: Command): void
  +addToHistory(commandName: String): void
  +getHistory(): List<String>
  +getCommandList(): Map<String,Command>
}

class Context {
  -fileManager: FileManager
  -commandManager: CommandManager
  -collectionManager: CollectionManager
  --
  +Context(fileManager: FileManager, commandManager: CommandManager, collectionManager: CollectionManager)
  +getFileManager(): FileManager
  +getCommandManager(): CommandManager
  +getCollectionManager(): CollectionManager
}

class FileManager {
  -filename: String
  --
  +FileManager(filename: String)
  +getFileName(): String
  +getFileCreationTime(): FileTime
  +saveFile(collection: LinkedHashSet<LabWork>): void
  +readFile(): LinkedHashSet<LabWork>
}

class RequestReader {
  -{static} logger: Logger = LoggerFactory.getLogger(RequestReader.class)
  --
  +read(data: byte[], length: int): Request
}

class RequestReceiver {
  -{static} logger: Logger = LoggerFactory.getLogger(RequestReceiver.class)
  -{static} BUFFER_SIZE: int = 65535
  -socket: DatagramSocket
  --
  +RequestReceiver(socket: DatagramSocket)
  +receive(): DatagramPacket
}

class ResponseSender {
  -{static} logger: Logger = LoggerFactory.getLogger(ResponseSender.class)
  -socket: DatagramSocket
  --
  +ResponseSender(socket: DatagramSocket)
  +send(response: Response, address: InetAddress, port: int): void
}

class ServerApp {
  -{static} PORT: int = 5555
  -{static} logger: Logger = LoggerFactory.getLogger(ServerApp.class)
  --
  +{static} main(args: String[]): void
  -{static} registerCommands(context: Context, commandManager: CommandManager, processor: CommandProcessor): void
}

ServerConsoleHandler ..> Context
CollectionManager ..> Context
Context *-- FileManager
Context *-- CommandManager
Context *-- CollectionManager
ServerApp ..> Context
ServerApp ..> CommandManager
ServerApp ..> CommandProcessor
@enduml